Fix CW field overflowing

--- a/app/javascript/flavours/aether/styles/components/contentwarning.scss
+++ b/app/javascript/flavours/aether/styles/components/contentwarning.scss
@@ -5,7 +5,7 @@
   margin-top: 15px;
 
   > span {
-    max-width: calc(100% - 80px);
+    max-width: calc(100% - 78px);
     font-size: 1rem;
     width: 100%;
     display: inline-block;
@@ -14,7 +14,7 @@
     border: var(--ui-body-secondary-color) 2px solid;
     border-right: 0;
     box-sizing: border-box;
-    margin-left: -20px;
+    margin-left: -22px;
     padding-left: 20px;
     background: var(--ui-body-secondary-color);
   }
